--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGO_URI=mongodb+srv://matiasaguirrecorrea_db_user:qqQvAF0Mi8jcIr7K@matchflow.28vetv3.mongodb.net/
+MONGO_URI=mongodb+srv://matiasaguirrecorrea_db_user:qqQvAF0Mi8jcIr7K@matchflow.28vetv3.mongodb.net/accounts
